--- a/iosInfo.plist
+++ b/iosInfo.plist
@@ -9,7 +9,7 @@
     <key>CFBundleGetInfoString</key>
     <string>Created by Qt/QMake</string>
     <key>CFBundleIdentifier</key>
-    <string>com.dfordsoft.codeinspector</string>
+    <string>com.dfordsoft.codeinspector.full</string>
     <key>CFBundleName</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundlePackageType</key>
