--- a/iosInfo.plist
+++ b/iosInfo.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleDisplayName</key>
-    <string>Code Inspector</string>
+    <string>CodeInspector</string>
     <key>CFBundleExecutable</key>
     <string>CodeInspector</string>
     <key>CFBundleGetInfoString</key>
     <string>Created by Qt/QMake</string>
     <key>CFBundleIdentifier</key>
-    <string>com.dfordsoft.codeinspector.full</string>
+    <string>com.dfordsoft.codeinspector</string>
     <key>CFBundleName</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundlePackageType</key>
@@ -52,7 +52,7 @@
     <key>UILaunchImageFile</key>
     <string>Default</string>
     <key>MinimumOSVersion</key>
-    <string>8.0</string>
+    <string>10.0</string>
     <key>UIBackgroundModes</key>
     <array>
         <string>fetch</string>
