--- a/iosInfo.plist
+++ b/iosInfo.plist
@@ -4,6 +4,8 @@
 <dict>
     <key>CFBundleDisplayName</key>
     <string>CodeInspector</string>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>en-US</string>
     <key>CFBundleExecutable</key>
     <string>CodeInspector</string>
     <key>CFBundleGetInfoString</key>
