--- a/iosInfo.plist
+++ b/iosInfo.plist
@@ -30,24 +30,9 @@
             <array>
                 <string>Icon-Small</string>
                 <string>Icon-Small-40</string>
-                <string>Icon-Small-50</string>
-                <string>Icon</string>
                 <string>Icon-60</string>
-                <string>Icon-72</string>
-            </array>
-        </dict>
-    </dict>
-    <key>CFBundleIcons~ipad</key>
-    <dict>
-        <key>CFBundlePrimaryIcon</key>
-        <dict>
-            <key>CFBundleIconFiles</key>
-            <array>
-                <string>Icon-Small</string>
-                <string>Icon-Small-40</string>
-                <string>Icon-Small-50</string>
-                <string>Icon-72</string>
                 <string>Icon-76</string>
+                <string>Icon-83.5</string>
             </array>
         </dict>
     </dict>
@@ -70,6 +55,8 @@
     <array>
         <string>UIInterfaceOrientationLandscapeLeft</string>
         <string>UIInterfaceOrientationLandscapeRight</string>
+        <string>UIInterfaceOrientationPortrait</string>
+        <string>UIInterfaceOrientationPortraitUpsideDown</string>
     </array>
     <key>UISupportedInterfaceOrientations~ipad</key>
     <array>
