--- a/iosInfo.plist
+++ b/iosInfo.plist
@@ -2,68 +2,87 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleDisplayName</key>
-    <string>ToAsm</string>
-    <key>CFBundleDevelopmentRegion</key>
-    <string>en-US</string>
-    <key>CFBundleExecutable</key>
-    <string>ToAsm</string>
-    <key>CFBundleGetInfoString</key>
-    <string>Created by Qt/QMake</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.dfordsoft.toasm.full</string>
-    <key>CFBundleName</key>
-    <string>${PRODUCT_NAME}</string>
-    <key>CFBundlePackageType</key>
-    <string>APPL</string>
-    <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
-    <key>CFBundleSignature</key>
-    <string>????</string>
-    <key>CFBundleVersion</key>
-    <string>1.0</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en-US</string>
+	<key>CFBundleDisplayName</key>
+	<string>ToAsm</string>
+	<key>CFBundleExecutable</key>
+	<string>ToAsm</string>
+	<key>CFBundleGetInfoString</key>
+	<string>Created by Qt/QMake</string>
     <key>CFBundleIcons</key>
     <dict>
         <key>CFBundlePrimaryIcon</key>
         <dict>
             <key>CFBundleIconFiles</key>
             <array>
-                <string>Icon-Small</string>
-                <string>Icon-Small-40</string>
-                <string>Icon-60</string>
-                <string>Icon-76</string>
-                <string>Icon-83.5</string>
+                <string>AppIcon29x29.png</string>
+                <string>AppIcon29x29@2x.png</string>
+                <string>AppIcon40x40@2x.png</string>
+                <string>AppIcon57x57.png</string>
+                <string>AppIcon57x57@2x.png</string>
+                <string>AppIcon60x60@2x.png</string>
             </array>
         </dict>
     </dict>
-    <key>UILaunchImageFile</key>
-    <string>Default</string>
-    <key>MinimumOSVersion</key>
-    <string>10.0</string>
-    <key>UIBackgroundModes</key>
-    <array>
-        <string>fetch</string>
-    </array>
-    <key>UIDeviceFamily</key>
-    <array>
-        <integer>1</integer>
-        <integer>2</integer>
-    </array>
-    <key>UIStatusBarHidden</key>
-    <true/>
-    <key>UISupportedInterfaceOrientations</key>
-    <array>
-        <string>UIInterfaceOrientationLandscapeLeft</string>
-        <string>UIInterfaceOrientationLandscapeRight</string>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationPortraitUpsideDown</string>
-    </array>
-    <key>UISupportedInterfaceOrientations~ipad</key>
-    <array>
-        <string>UIInterfaceOrientationLandscapeLeft</string>
-        <string>UIInterfaceOrientationLandscapeRight</string>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationPortraitUpsideDown</string>
-    </array>
+    <key>CFBundleIcons~ipad</key>
+    <dict>
+        <key>CFBundlePrimaryIcon</key>
+        <dict>
+            <key>CFBundleIconFiles</key>
+            <array>
+                <string>AppIcon29x29.png</string>
+                <string>AppIcon29x29@2x.png</string>
+                <string>AppIcon40x40@2x.png</string>
+                <string>AppIcon57x57.png</string>
+                <string>AppIcon57x57@2x.png</string>
+                <string>AppIcon60x60@2x.png</string>
+                <string>AppIcon29x29~ipad.png</string>
+                <string>AppIcon29x29@2x~ipad.png</string>
+                <string>AppIcon40x40~ipad.png</string>
+                <string>AppIcon40x40@2x~ipad.png</string>
+                <string>AppIcon50x50~ipad.png</string>
+                <string>AppIcon50x50@2x~ipad.png</string>
+                <string>AppIcon72x72~ipad.png</string>
+                <string>AppIcon72x72@2x~ipad.png</string>
+                <string>AppIcon76x76~ipad.png</string>
+                <string>AppIcon76x76@2x~ipad.png</string>
+            </array>
+        </dict>
+    </dict>
+	<key>CFBundleIdentifier</key>
+	<string>com.dfordsoft.toasm.full</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>MinimumOSVersion</key>
+	<string>10.0</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+		<integer>2</integer>
+	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+	</array>
 </dict>
 </plist>
