(+)introduce KF5SyntaxHighlighting

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdparty/scintilla"]
 	path = 3rdparty/scintilla
 	url = https://github.com/mirror/scintilla.git
+[submodule "3rdparty/KF5SyntaxHighlighting"]
+	path = 3rdparty/KF5SyntaxHighlighting
+	url = https://anongit.kde.org/syntax-highlighting.git
