(*)update checkout action

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -47,15 +47,11 @@ jobs:
           # Architecture for Windows/Android
           arch: ${{ matrix.qt_arch }}
       # 拉取代码
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 1
-      - name: Checkout submodules
-        shell: cmd
-        env:
-          vc_arch: ${{ matrix.msvc_arch }}
-        run: |
-          git submodule update --init --recursive
+          ref: ${{ github.head_ref }}
+          submodules: true
+          
       # 编译msvc
       - name: build-msvc
         shell: cmd
