--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,14 +25,11 @@ jobs:
         with:
           version: ${{ matrix.qt_ver }}
       
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 1
-      - name: Checkout submodules
-        env:
-          vc_arch: ${{ matrix.msvc_arch }}
-        run: |
-          git submodule update --init --recursive
+          ref: ${{ github.head_ref }}
+          submodules: true
+          
       - name: build macos
         run: |
           cd 3rdparty/scintilla/qt/ScintillaEdit
