--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -69,7 +69,6 @@ jobs:
           cd ..
       # tag 打包
       - name: package
-        if: startsWith(github.event.ref, 'refs/tags/')
         env:
           VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
           archiveName: ${{ env.targetName }}-${{ matrix.qt_arch }}
@@ -79,8 +78,6 @@ jobs:
           New-Item -ItemType Directory ${env:archiveName}
           # 拷贝exe
           Copy-Item build\Release\${env:targetName}'.exe' ${env:archiveName}\
-          Copy-Item build\Release\Everything.exe ${env:archiveName}\
-          Copy-Item build\Release\Everything*.dll ${env:archiveName}\
           # 拷贝依赖
           windeployqt --qmldir . ${env:archiveName}\${env:targetName}'.exe'
           # 打包zip
@@ -90,6 +87,13 @@ jobs:
           echo "::set-env name=packageName::$name"
           # 打印环境变量packageName
           Write-Host 'packageName:'${env:packageName}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: ${{ env.targetName }}-${{ matrix.qt_arch }}
+          path: ${{ env.targetName }}-${{ matrix.qt_arch }}
+          
       # tag 查询github-Release
       - name: queryReleaseWin
         id: queryReleaseWin
