--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -19,16 +19,18 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
-        qt_ver: [5.14.2]
+        qt_ver: [5.15.0]
         qt_arch: [clang_64]
     env:
       targetName: CodeInspector
     steps:
       - name: Install Qt
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v2.6.3
         with:
-          version: ${{ matrix.qt_ver }}
-      
+          version: ${{ matrix.qt_ver }}      
+          install-deps: 'true'
+          aqtversion: '>=0.9.0'
+        
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
@@ -48,13 +50,7 @@ jobs:
       - name: package
         run: |
           macdeployqt "build/desktop-qt/${targetName}.app" -qmldir=. -verbose=1 -dmg
-          
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.targetName }}-${{ matrix.qt_arch }}
-          path: build/desktop-qt/${{ env.targetName }}.dmg
-          
+        
       - name: queryRelease
         id: queryReleaseMacos
         if: startsWith(github.event.ref, 'refs/tags/')
