--- a/.github/workflows/win-mingw.yml
+++ b/.github/workflows/win-mingw.yml
@@ -72,12 +72,11 @@ jobs:
       targetName: CodeInspector
       
     steps:
-      - uses: numworks/setup-msys2@v1
+      - uses: msys2/setup-msys2@v2
         with:
           update: true
           msystem: ${{ matrix.mingw_arch }}
-
-      - run: msys2do pacman --noconfirm -S ${{ matrix.mingw_prefix }}-${{ matrix.toolchains }} ${{ matrix.mingw_prefix }}-make ${{ matrix.mingw_prefix }}-${{ matrix.qt_build }} ${{ matrix.mingw_prefix }}-openssl ${{ matrix.mingw_prefix }}-zstd
+          install:  ${{ matrix.mingw_prefix }}-${{ matrix.toolchains }} ${{ matrix.mingw_prefix }}-make ${{ matrix.mingw_prefix }}-${{ matrix.qt_build }} ${{ matrix.mingw_prefix }}-openssl ${{ matrix.mingw_prefix }}-zstd
 
       - uses: actions/checkout@v2
         with:
@@ -93,18 +92,18 @@ jobs:
           cd ..\..\..\..
 
       - name: qmake
-        shell: cmd
+        shell: msys2 {0}
         run: |
           mkdir build
           cd build
-          msys2do ${{ matrix.qmake }} -r -spec ${{ matrix.mkspec }} CONFIG+=release CONFIG+=qtquickcompiler ..
+          ${{ matrix.qmake }} -r -spec ${{ matrix.mkspec }} CONFIG+=release CONFIG+=qtquickcompiler ..
           cd ..
 
       - name: mingw32-make
-        shell: cmd
+        shell: msys2 {0}
         run: |
           cd build
-          msys2do mingw32-make.exe -j 4
+          mingw32-make.exe -j 4
           cd ..
 
       - name: extract executable
@@ -115,8 +114,3 @@ jobs:
           New-Item -ItemType Directory ${env:archiveName}
           Copy-Item build\desktop-qt\release\${env:targetName}'.exe' ${env:archiveName}\
           
-      - name: deploy qt
-        env:
-          archiveName: ${{ env.targetName }}-${{ matrix.toolchains }}
-        run: |
-          msys2do ${{ matrix.windeployqt }} ${env:archiveName}/${env:targetName}'.exe'
