fix env var ref

--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -237,7 +237,7 @@ jobs:
         shell: msys2 {0}
         run: |
           cd build
-          mingw32-make.exe -j %NUMBER_OF_PROCESSORS%
+          mingw32-make.exe -j $NUMBER_OF_PROCESSORS
           cd ..
 
       - name: extract executable
