--- a/desktop-qt/CodeInspector.rc
+++ b/desktop-qt/CodeInspector.rc
@@ -13,11 +13,11 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "missdeer@dfordsoft.com"
+            VALUE "CompanyName", "DForD Software"
             VALUE "FileDescription", "CodeInspector"
             VALUE "FileVersion", "1.0.0.1"
             VALUE "InternalName", "CodeInspector"
-            VALUE "LegalCopyright", "Copyright (C) 2017 - 2019 CodeInspector. All rights reserved."
+            VALUE "LegalCopyright", "Copyright (C) 2017 - 2021 me@minidump.info. All rights reserved."
             VALUE "OriginalFilename", "CodeInspector.exe"
             VALUE "ProductName", "CodeInspector"
             VALUE "ProductVersion", "1.0.0.1"
