--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = 3rdparty/zlib
 	url = https://github.com/madler/zlib.git
 	branch = master
+[submodule "3rdparty/lexilla"]
+	path = 3rdparty/lexilla
+	url = https://github.com/ScintillaOrg/lexilla.git
