--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
 [submodule "3rdparty/scintilla"]
 	path = 3rdparty/scintilla
-	url = https://github.com/amezin/scintilla.git
-	branch = upstream
+	url = https://github.com/missdeer/scintilla.git
 [submodule "3rdparty/zlib"]
 	path = 3rdparty/zlib
 	url = https://github.com/madler/zlib.git
